--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
 
+  
+  <head>
+  <title>Marys & Jay - Home</title>
+    <meta charset="UTF-8">
+  </head>
+  
+  <body>
+    
+    <adress>
+      Made by <a href="mailto:117552@vituscollege.nl">Marys</a> 
+    </adress>
+    
+  </body>
+
+
+
+
+
+
+  
+</html>
