added audio element

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
     <adress>
       Made by <a href="mailto:117552@vituscollege.nl">Marys</a> 
     </adress>
-    
+
+    <br>
+    <br>
+
+    <audio src="https://www.youtube.com/watch?v=-dl8dSgcaeg" controls>
+
+      <p> Error 1: Browser doesn't support audio element</p>
+
+    </audio>
+
+
   </body>
 
 
