--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <meta charset="UTF-8">
   </head>
   
-  <body>
+  <body>  
+   <span> <h1 style="font-size: 100px;">Home </h1> </span>
+
+
+
+    <br>
+    <br>
     
+
+<p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
+
     <adress>
       Made by <a href="mailto:117552@vituscollege.nl">Marys</a> 
-    </adress>
+    </adress> 
 
-    <br>
-    <br>
-
-    <audio src="https://www.youtube.com/watch?v=-dl8dSgcaeg" controls>
-
-      <p> Error 1: Browser doesn't support audio element</p>
-
-    </audio>
-
-
+</p>
   </body>
 
 
