Made css file and linked it

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
   <title>Marys & Jay - Home</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   
   <body>  
