--- a/hobbys.html
+++ b/hobbys.html
@@ -11,6 +11,16 @@
   <body>  
    <span> <h1 style="font-size: 100px;">Hobby's </h1> </span>
     
+<br>
+<br>
+
+<ul>
+  
+    <li><a href="index.html">Home</a></li>
+    <li><a href="hobbys.html">Hobby's</a></li>
+    <li><a href="portfolio.html">Portfolio</a></li>
+  
+  </ul>
 
 <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
 
