--- a/hobbys.html
+++ b/hobbys.html
@@ -22,7 +22,7 @@
   
   </ul>
 
-<p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
+<p style="font-size: medium; position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
 
     <adress>
       Made by <a href="mailto:117552@vituscollege.nl">Marys</a> 
