--- a/hobbys.html
+++ b/hobbys.html
@@ -22,6 +22,8 @@
   
   </ul>
 
+  <img src="dojo_bussum.jpeg" alt="dojo_bussum">
+
 <p style="font-size: medium; position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
 
     <adress>
