--- a/hobbys.html
+++ b/hobbys.html
@@ -2,14 +2,17 @@
 <html>
 
   
-  <head>
+<head>
   <title>Marys & Jay - Home</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="stylesheet.css">
-  </head>
+</head>
   
-  <body>  
-   <span> <h1 style="font-size: 100px;">Hobby's </h1> </span>
+<body>  
+
+<header>
+
+   <h1 style="font-size: 100px;">Hobby's </h1> 
     
 <br>
 <br>
@@ -20,8 +23,9 @@
     <li><a href="hobbys.html">Hobby's</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
   
-  </ul>
+</ul>
 
+</header>
 
   <img id="dojo" src="dojo_bussum.jpeg" alt="dojo_bussum">
 
