--- a/index.html
+++ b/index.html
@@ -3,33 +3,36 @@
 
   
   <head>
-  <title>Marys & Jay - Home</title>
+    <title>Marys & Jay - Home</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   
+<header>
+
   <body>  
-   <span> <h1 style="font-size: 100px;">Home </h1> </span>
+   <h1 style="font-size: 100px;">Home </h1> 
 
 <br>
 <br>
 
-<ul>
+  <ul>
   
-  <li><a href="index.html">Home</a></li>
-  <li><a href="hobbys.html">Hobby's</a></li>
-  <li><a href="portfolio.html">Portfolio</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="hobbys.html">Hobby's</a></li>
+    <li><a href="portfolio.html">Portfolio</a></li>
 
-</ul>
+  </ul>
 
+</header>
 
-<p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
+  <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
 
     <adress>
       Made by <a href="mailto:117552@vituscollege.nl">Marys</a> 
     </adress> 
 
-</p>
+  </p>
   </body>
 
 
