--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
 <header>
 
-  <h1 style="font-size: 100px;">Hobby's </h1> 
+  <h1 style="font-size: 100px;">Portfolio </h1> 
        
 <br>
 <br>
