--- a/portfolio.html
+++ b/portfolio.html
@@ -6,10 +6,76 @@
   <title>Marys & Jay - Portfolio</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="stylesheet.css">
+
+    <style>
+      body {
+          font-family: Arial, sans-serif;
+          margin: 0;
+          padding: 0;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          min-height: 100vh;
+          background-color: #f4f4f4;
+      }
+
+      .grid {
+          display: grid;
+          grid-template-columns: repeat(5, 1fr);
+          gap: 10px;
+          margin: 20px;
+      }
+      .grid button {
+          padding: 20px;
+          font-size: 16px;
+          background-color: #007BFF;
+          color: white;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+          transition: background-color 0.3s;
+      }
+      .grid button:hover {
+          background-color: #0056b3;
+      }
+  </style>
+
 </head>
   
 <body>  
 
+
+  <div class="grid">
+    <!-- 5x5 buttons -->
+    <button>Button 1</button>
+    <button>Button 2</button>
+    <button>Button 3</button>
+    <button>Button 4</button>
+    <button>Button 5</button>
+    <button>Button 6</button>
+    <button>Button 7</button>
+    <button>Button 8</button>
+    <button>Button 9</button>
+    <button>Button 10</button>
+    <button>Button 11</button>
+    <button>Button 12</button>
+    <button>Button 13</button>
+    <button>Button 14</button>
+    <button>Button 15</button>
+    <button>Button 16</button>
+    <button>Button 17</button>
+    <button>Button 18</button>
+    <button>Button 19</button>
+    <button>Button 20</button>
+    <button>Button 21</button>
+    <button>Button 22</button>
+    <button>Button 23</button>
+    <button>Button 24</button>
+    <button>Button 25</button>
+</div>
+
+ 
 <header>
 
   <h1 style="font-size: 100px;">Portfolio </h1> 
