--- a/portfolio.html
+++ b/portfolio.html
@@ -48,31 +48,31 @@
 
   <div class="grid">
     <!-- 5x5 buttons -->
-    <button>Button 1</button>
-    <button>Button 2</button>
-    <button>Button 3</button>
-    <button>Button 4</button>
-    <button>Button 5</button>
-    <button>Button 6</button>
-    <button>Button 7</button>
-    <button>Button 8</button>
-    <button>Button 9</button>
-    <button>Button 10</button>
-    <button>Button 11</button>
-    <button>Button 12</button>
-    <button>Button 13</button>
-    <button>Button 14</button>
-    <button>Button 15</button>
-    <button>Button 16</button>
-    <button>Button 17</button>
-    <button>Button 18</button>
-    <button>Button 19</button>
-    <button>Button 20</button>
-    <button>Button 21</button>
-    <button>Button 22</button>
-    <button>Button 23</button>
-    <button>Button 24</button>
-    <button>Button 25</button>
+    <button>Opdracht 1</button>
+    <button>Opdracht 2</button>
+    <button>Opdracht 3</button>
+    <button>Opdracht 4</button>
+    <button>Opdracht 5</button>
+    <button>Opdracht 6</button>
+    <button>Opdracht 7</button>
+    <button>Opdracht 8</button>
+    <button>Opdracht 9</button>
+    <button>Opdracht 10</button>
+    <button>Opdracht 11</button>
+    <button>Opdracht 12</button>
+    <button>Opdracht 13</button>
+    <button>Opdracht 14</button>
+    <button>Opdracht 15</button>
+    <button>Opdracht 16</button>
+    <button>Opdracht 17</button>
+    <button>Opdracht 18</button>
+    <button>Opdracht 19</button>
+    <button>Opdracht 20</button>
+    <button>Opdracht 21</button>
+    <button>Opdracht 22</button>
+    <button>Opdracht 23</button>
+    <button>Opdracht 24</button>
+    <button>Opdracht 25</button>
 </div>
 
  
