--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 
     <style>
-      
+
       .grid {
           display: grid;
           grid-template-columns: repeat(5, 1fr);
@@ -18,7 +18,7 @@
       .grid button {
           padding: 20px;
           font-size: 16px;
-          background-color: #007BFF;
+          background-color: #ffffff;
           color: white;
           border: none;
           border-radius: 5px;
@@ -26,7 +26,7 @@
           transition: background-color 0.3s;
       }
       .grid button:hover {
-          background-color: #0056b3;
+          background-color: #bbbbbb;
       }
   </style>
 
