--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
           color: white;
           border: none;
           border-radius: 5px;
-          cursor: pointer;
+          cursor: wait;
           transition: background-color 0.3s;
       }
       .grid button:hover {
