--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       .grid button {
           padding: 20px;
           font-size: 16px;
-          background-color: #ffffff;
+          background-color: #a200ff;
           color: white;
           border: none;
           border-radius: 5px;
