--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,11 @@
 
     <style>
 
+* {
+    margin: 0;
+    padding: 0;
+
+}
       .grid {
           display: grid;
           grid-template-columns: repeat(5, 1fr);
