--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,7 @@
           grid-template-columns: repeat(5, 1fr);
           gap: 10px;
           margin: 20px;
+          position: absolute;
       }
       .grid button {
           padding: 20px;
