--- a/hobbys.html
+++ b/hobbys.html
@@ -3,7 +3,7 @@
 
   
 <head>
-  <title>Marys & Jay - Hobby's</title>
+  <title>Marys Website - Hobby's</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
