--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   
   <head>
-    <title>Marys & Jay - Home</title>
+    <title>Marys Website - Home</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="stylesheet.css">
   </head>
