--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
       .grid button {
           padding: 20px;
           font-size: 16px;
-          background-color: #a200ff;
+          background-color: #fffb00;
           color: white;
           border: none;
           border-radius: 5px;
@@ -32,7 +32,7 @@
           transition: background-color 0.3s;
       }
       .grid button:hover {
-          background-color: #bbbbbb;
+          background-color: #3f0404;
       }
   </style>
 
